<resources>
    <string name="app_name">InventoryApp</string>

    <!--Empty string text-->
    <string name="empty_string">No inventory items loaded.</string>
    
    <!--Empty string subtitle-->
    <string name="empty_string_subtitle">Add a product with the button below.</string>

    <!-- Label for product name attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_name">Product Name:</string>

    <!--Product name hint-->
    <string name="product_name_hint">Type the product name here</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="product_price">Product Price:</string>

    <!--Product price hint-->
    <string name="product_price_hint">Input the product price here</string>

    <!--Product quantity hint-->
    <string name="product_quantity_hint">Input the initial quantity</string>

    <string name="order_more">Quick Order</string>

    <string name="product_quantity">In-Stock</string>

    <string name="missing_info">Product name, quantity, and price are required.
        Please try again.</string>

    <string name="sell">Sell</string>

    <string name="bulk_order">Bulk Order</string>

    <string name="action_delete">Delete Product</string>

    <string name="action_save">Save</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete all entries</string>

    <string name="editor_activity_title_new_product">Add a new product</string>

    <string name="editor_activity_title_edit_product">Edit product</string>

    <string name="editor_insert_product_failed">Product failed to insert.</string>

    <string name="editor_insert_product_successful">Product successfully added.</string>

    <string name="editor_update_product_failed">Product update failed.</string>

    <string name="editor_update_product_successful">Product update successful.</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="out_of_stock">Product out of stock.</string>

</resources>
