<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/parent_margin"
        tools:context=".DetailActivity">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <!-- Product Name Edit field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_name" />

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:hint="@string/product_name_hint"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_price" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:hint="@string/product_price_hint"
                android:inputType="number"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_quantity" />

            <!-- Quantity field -->
            <TextView
                android:id="@+id/edit_product_quantity"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:fontFamily="sans-serif_light"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="24dp"
                tools:text="5"/>

        </LinearLayout>

        <LinearLayout
            android:paddingTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/order_more" />

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sell" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bulk_order" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>